// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with abbreviations inside parenthesis 1`] = `"%%%0%%% %%%1%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with anchor heading syntax. 1`] = `
"# %%%0%%% {#anchor1} {#anchor2}

## %%%1%%%"
`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with autolink syntax. 1`] = `"%%%0%%% %%%1%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with code syntax. 1`] = `"%%%0%%% %%%1%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with deflist 1`] = `
"%%%0%%%

:   %%%1%%%"
`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with duplicate text into inline code 1`] = `"%%%0%%%\`"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with em syntax. 1`] = `"%%%0%%% %%%1%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with file syntax. 1`] = `"%%%0%%% %%%1%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with image syntax. 1`] = `"%%%3%%% %%%4%%% %%%5%%% %%%6%%% %%%7%%% []()%%%8%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with inline code that has liquid syntax inside 1`] = `"%%%0%%% %%%1%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with inline html. 1`] = `"%%%0%%% %%%1%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with links in the end 1`] = `"%%%0%%% %%%1%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with links syntax. 1`] = `"%%%2%%% %%%3%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with liquid conditions. 1`] = `"%%%0%%% %%%1%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with liquid filters inside tables. 1`] = `
"#|
|| %%%0%%% | %%%1%%% ||
|| %%%2%%% | %%%3%%% ||
|#"
`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with liquid filters. 1`] = `"%%%0%%% %%%1%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with liquid functions. 1`] = `"%%%0%%% %%%1%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with liquid loops. 1`] = `"%%%0%%% {% for x in xs %}%%%1%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with liquid variables. 1`] = `"%%%0%%% %%%1%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with plain text, separated by newline. 1`] = `
"%%%0%%%
%%%1%%%"
`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with plain text. 1`] = `"%%%0%%% %%%1%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with ref links syntax. 1`] = `"%%%1%%% %%%2%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with s syntax. 1`] = `"%%%0%%% %%%1%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with samp syntax. 1`] = `"%%%0%%% %%%1%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with sentences in inline code 1`] = `"%%%0%%%\` %%%1%%% %%%2%%% "`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with strong syntax. 1`] = `"%%%0%%% %%%1%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with sup syntax. 1`] = `"%%%0%%% %%%1%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with variable href link syntax. 1`] = `"%%%1%%% %%%2%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with variable image syntax. 1`] = `"%%%0%%% %%%1%%%"`;

exports[`inline: skeleton rendering > inline: renders hash instead of the sentences with video syntax. 1`] = `"%%%0%%% %%%1%%% @[youtube](https://youtu.be/rJz4OaURJ6U)"`;
